# HVM3

./: .gitignore  CHANGELOG.md  HVM3.cabal  README.md  aoe.json  cabal.project  hvml_watch.sh
app/: HVM.kind  Main.hs  book.c  main.c
app/HVM/Lazy/: Extract.hs  Inject.hs  Normal.hs  Parse.hs  Reduce.hs  Runtime.c  Show.hs  Type.hs
bench/: T0.bend  Test.hvms  minimal.c
book/: HOAS.hvml  Tx02.hvml  Tx04.hvml  Tx08.hvml  Tx16.hvml  Tx18.hvml  bench_count.hvml  bench_sum_range.hs  bench_sum_range.hvml  church_mul.hvml  count.hs  count.hvml  enum_bin.hvml  enum_coc_smart.hvml  enum_kind_smart.hvml  enum_lam_naive_blc.hs  enum_lam_naive_blc.hvml  enum_lam_smart.hvml  enum_primes.hs  enum_primes.hvml  feat_cmul.hvml  feat_hoas.hvml  feat_mut_ref.hvml  fuse_inc.hvm1  fuse_rot.hvml  lambda_enumerator_naive_blc.hs  lambda_enumerator_naive_blc.hvml  lambda_enumerator_optimal.hvml  main.hvml  mul_by_sqr_add.hvml  mutable_ref.bend  mutable_ref.hvml  nots.hvml  optimal.hvm1  optimal.hvml  optimal_linear_context_passing.hvml  pseudo_metavar.hvml  pseudo_metavar_bin.hvml  pseudo_metavar_factors.hs  pseudo_metavar_factors.hvml  (+6 more)
src/: Main.hs
src/HVML/: Collapse.hs  Compile.hs  Equal.hs  Extract.hs  Inject.hs  Main.hs  Normal.hs  Parse.hs  Reduce.hs  Runtime.c  Show.hs  Type.hs
src/HVMS/: Extract.hs  Inject.hs  Main.hs  Normal.hs  Parse.hs  Runtime.c  Show.hs  Type.hs
