cabal-version:      3.0
name:               HVM3
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HVM3
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      mtl ^>=2.3.1,
                      containers ^>=0.7,
                      unordered-containers ^>=0.2.19.1,
                      parsec ^>=3.1.17.0,
                      hashable ^>=1.5.0.0,
    hs-source-dirs:   app
    default-language: GHC2024
    c-sources:        app/main.c
    extra-libraries:  c
