cabal-version:      3.0
name:               HVM3
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hvml
    import:           warnings
    main-is:          HVML/Main.hs
    other-modules:    HVML.Type
                    , HVML.Collapse
                    , HVML.Compile
                    , HVML.Extract
                    , HVML.Inject
                    , HVML.Parse
                    , HVML.Reduce
                    , HVML.Show
    build-depends:    base ^>=4.20.0.0,
                      mtl ^>=2.3.1,
                      containers ^>=0.7,
                      unordered-containers ^>=0.2.19.1,
                      parsec ^>=3.1.17.0,
                      hashable ^>=1.5.0.0,
                      hs-highlight == 1.0.3,
                      ansi-terminal == 1.1.1,
                      transformers == 0.6.1.1,
                      list-t == 1.0.5.7,
                      time ^>=1.12.2,
                      process,
                      libffi,
                      unix,
                      file-embed,
                      bytestring,
    hs-source-dirs:   src
    default-language: GHC2024
    c-sources:        src/HVML/Runtime.c
    extra-libraries:  c
    ghc-options:     -Wno-all -threaded

executable hvms
    import:           warnings
    main-is:          HVMS/Main.hs
    other-modules:    HVMS.Type
                    , HVMS.Extract
                    , HVMS.Inject
                    , HVMS.Parse
                    , HVMS.Show
    build-depends:    base ^>=4.20.0.0,
                      mtl ^>=2.3.1,
                      containers ^>=0.7,
                      unordered-containers ^>=0.2.19.1,
                      parsec ^>=3.1.17.0,
                      hashable ^>=1.5.0.0,
    hs-source-dirs:   src
    default-language: GHC2024
    c-sources:        src/HVMS/Runtime.c
    extra-libraries:  c
    ghc-options:     -Wno-all
